--- a/Week 10/demo.html
+++ b/Week 10/demo.html
@@ -32,9 +32,14 @@
             <p>I want to divide 48 pencils among 12 kids. How many pencils do each child get?</p>
             <button >Show answer</button>
 
-            <p>Calculate the 'mean' of these numbers: 25,47,98,46,52</p>
+            <p>Calculate the 'mean' of these numbers: 25,47,98,46,52 (Add all numbers and divide by 5)</p>
             <button >Show answer</button> 
-            
+
+            <p>Is 100 greater than 1000? ("Yes or No")</p>
+            <button >Show answer</button> 
+
+            <p>Is 5 times 4 greater than 20? ("Yes or No")</p>
+            <button >Show answer</button> 
         </div>
     </body>
 </html>
