--- a/Week13/jsdom.html
+++ b/Week13/jsdom.html
@@ -8,6 +8,8 @@
     <body>
         <h1>Welcome to the Javascript Document Object Model</h1>
         <button onclick="accessElementsByTagName();">Access Elements by Tag name now!</button>                
+        <button onclick="Homework();">HomeWork</button>                
+                      
         <main>          
             <div>
                 <h4 id="header">How to access html elements in javascript</h4>
@@ -37,7 +39,7 @@
             </div>      
         </main>
         <footer>
-            <p>Copyright &amp; Manjula Chandirasekaran</p>
+            <p id="copyright">Copyright &amp; Manjula Chandirasekaran</p>
             <a href="http://www.google.com">Go to google</a>
         </footer>
     </body>
